force-app/main/default/objects/WorkType/fields/ALK_Complex_Work__c.field-meta.xml
<CustomField>
    <fullName>ALK_Complex_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trabajos Complejos</label>
    <type>Checkbox</type>
</CustomField>