force-app/main/default/objects/WorkType/fields/ALK_EAN_Code__c.field-meta.xml
<CustomField>
    <fullName>ALK_EAN_Code__c</fullName>
    <externalId>true</externalId>
    <label>Código EAN</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>