force-app/main/default/objects/WorkType/fields/ALK_Service_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>ALK_Service_Recommendation__c</fullName>
    <label>Recomendaciones del Servicio</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>