force-app/main/default/objects/WorkType/fields/ALK_Work_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>ALK_Work_Type_Category__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Muebles</fullName>
            </value>
            <value>
                <fullName>Lavadoras</fullName>
            </value>
            <value>
                <fullName>Nevecones</fullName>
            </value>
            <value>
                <fullName>Lavaplatos</fullName>
            </value>
            <value>
                <fullName>Aires Acondicionados</fullName>
            </value>
            <value>
                <fullName>Visitas Aires Acondicionados</fullName>
            </value>
            <value>
                <fullName>Horno</fullName>
            </value>
            <value>
                <fullName>Secadora</fullName>
            </value>
            <value>
                <fullName>Estufa + Corte</fullName>
            </value>
            <value>
                <fullName>Estufa</fullName>
            </value>
            <value>
                <fullName>Calentadores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>