force-app/main/default/objects/WorkType/listViews/All_WorkTypes.listView-meta.xml
<ListView>
    <fullName>All_WorkTypes</fullName>
    <columns>Name</columns>
    <columns>ALK_EAN_Code__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>ALK_Work_Type_Category__c</columns>
    <columns>ALK_Complex_Work__c</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>ALK_Service_Recommendation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Types</label>
</ListView>